--- a/src/View/main_window.fxml
+++ b/src/View/main_window.fxml
@@ -1,11 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import javafx.scene.paint.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
-<SplitPane dividerPositions="0.29797979797979796" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<SplitPane dividerPositions="0.29797979797979796" prefHeight="637.0" prefWidth="847.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Controller">
   <items>
-    <AnchorPane maxWidth="400.0" minWidth="150.0" prefWidth="200.0" style="-fx-background-color: #EEE;" />
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #555;" />
+    <AnchorPane maxWidth="400.0" minWidth="150.0" prefWidth="200.0" style="-fx-background-color: #EEE;">
+         <children>
+            <Label layoutX="14.0" layoutY="54.0" text="First image : " />
+            <Button fx:id="firstimagebrowse" layoutX="82.0" layoutY="71.0" mnemonicParsing="false" onAction="#Button1Action" text="Browse..." />
+            <Label fx:id="firstimagepath" layoutX="34.0" layoutY="109.0" prefHeight="17.0" prefWidth="217.0" text="PathOfImage..." />
+            <Label layoutX="14.0" layoutY="157.0" text="Second image : " />
+            <Button fx:id="secondimagebrowse" layoutX="87.0" layoutY="174.0" mnemonicParsing="false" onAction="#Button2Action" text="Browse..." />
+            <Label fx:id="secondimagepath" layoutX="34.0" layoutY="220.0" prefHeight="17.0" prefWidth="217.0" text="PathOfImage1..." />
+            <Separator layoutY="301.0" prefHeight="17.0" prefWidth="249.0" />
+            <Button fx:id="savebutton" layoutX="77.0" layoutY="276.0" mnemonicParsing="false" onAction="#SaveAction" text="Save &amp; Upload" />
+            <Label layoutX="111.0" layoutY="318.0" text="Filters : " />
+            <ComboBox fx:id="filtercombo" layoutX="50.0" layoutY="335.0" prefWidth="150.0" promptText="Select Filter" />
+            <Separator layoutX="125.0" layoutY="37.0" prefHeight="17.0" prefWidth="122.0" />
+            <Label layoutX="73.0" layoutY="37.0" text="Sources">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Separator layoutX="3.0" layoutY="37.0" prefHeight="17.0" prefWidth="68.0" />
+         </children></AnchorPane>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #555;">
+         <children>
+            <Pane prefHeight="637.0" prefWidth="590.0">
+               <children>
+                  <Pane fx:id="firstimagepreview" layoutX="55.0" layoutY="43.0" prefHeight="200.0" prefWidth="200.0" />
+                  <Separator layoutX="271.0" layoutY="27.0" orientation="VERTICAL" prefHeight="207.0" prefWidth="24.0" />
+                  <Pane fx:id="secondimagepreview" layoutX="364.0" layoutY="43.0" prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                     </children></Pane>
+                  <Separator layoutX="1.0" layoutY="269.0" prefHeight="25.0" prefWidth="834.0" />
+                  <Label fx:id="firstimageid" layoutX="35.0" layoutY="18.0" text="First image preview : " />
+                  <Label fx:id="secondimageid" layoutX="315.0" layoutY="18.0" text="Second image preview : " />
+                  <Pane fx:id="resultspane" layoutX="24.0" layoutY="300.0" prefHeight="326.0" prefWidth="552.0" />
+               </children>
+            </Pane>
+         </children></AnchorPane>
   </items>
 </SplitPane>
