--- a/src/View/main_window.fxml
+++ b/src/View/main_window.fxml
@@ -3,7 +3,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<SplitPane dividerPositions="0.29797979797979796" prefHeight="637.0" prefWidth="847.0"
+<?import View.View3D?>
+<SplitPane fx:id="root" dividerPositions="0.29797979797979796" prefHeight="637.0" prefWidth="847.0"
            xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Controller">
    <AnchorPane maxWidth="400.0" minWidth="150.0" prefWidth="200.0" style="-fx-background-color: #EEE;">
       <Label layoutX="14.0" layoutY="54.0" text="First image : " AnchorPane.topAnchor="54.0"/>
@@ -47,7 +48,7 @@
          <Separator layoutX="1.0" layoutY="269.0" prefHeight="25.0" prefWidth="834.0"/>
          <Label fx:id="firstimageid" layoutX="35.0" layoutY="18.0" text="First image preview : "/>
          <Label fx:id="secondimageid" layoutX="315.0" layoutY="18.0" text="Second image preview : "/>
-         <Pane fx:id="resultspane" layoutX="24.0" layoutY="300.0" prefHeight="326.0" prefWidth="552.0"/>
+         <View3D fx:id="resultspane" layoutX="24.0" layoutY="300.0" /><!--prefHeight="326.0" prefWidth="552.0"!-->
          <Label layoutX="10.0" layoutY="300.0" text="Results Preview : "/>
       </Pane>
    </AnchorPane>
