--- a/src/View/main_window.fxml
+++ b/src/View/main_window.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.paint.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -12,8 +7,9 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<SplitPane dividerPositions="0.29797979797979796" prefHeight="637.0" prefWidth="847.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Controller">
+<SplitPane dividerPositions="0.29797979797979796" prefHeight="637.0" prefWidth="847.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Controller">
   <items>
     <AnchorPane maxWidth="400.0" minWidth="150.0" prefWidth="200.0" style="-fx-background-color: #EEE;">
          <children>
@@ -45,6 +41,7 @@
          <children>
             <Pane prefHeight="637.0" prefWidth="590.0">
                <children>
+                  <Pane fx:id="previews" layoutY="-2.0" prefHeight="277.0" prefWidth="590.0">
                   <Pane fx:id="firstimagepreview" layoutX="55.0" layoutY="43.0" prefHeight="200.0" prefWidth="200.0" />
                   <Separator layoutX="271.0" layoutY="27.0" orientation="VERTICAL" prefHeight="207.0" prefWidth="24.0" />
                   <Pane fx:id="secondimagepreview" layoutX="364.0" layoutY="43.0" prefHeight="200.0" prefWidth="200.0">
@@ -53,8 +50,12 @@
                   <Separator layoutX="1.0" layoutY="269.0" prefHeight="25.0" prefWidth="834.0" />
                   <Label fx:id="firstimageid" layoutX="35.0" layoutY="18.0" text="First image preview : " />
                   <Label fx:id="secondimageid" layoutX="315.0" layoutY="18.0" text="Second image preview : " />
-                  <Pane fx:id="resultspane" layoutX="24.0" layoutY="300.0" prefHeight="326.0" prefWidth="552.0" />
+                  </Pane>
+                  <Pane>
+                     <Pane layoutY="282.0" prefHeight="344.0" prefWidth="590.0" />
+                  <Pane fx:id="resultspane" layoutX="24.0" layoutY="322.0" prefHeight="304.0" prefWidth="552.0" />
                   <Label layoutX="10.0" layoutY="300.0" text="Results Preview : " />
+                  </Pane>
                </children>
             </Pane>
          </children></AnchorPane>
