--- a/src/View/main_window.fxml
+++ b/src/View/main_window.fxml
@@ -7,54 +7,69 @@
 <?import javafx.scene.image.ImageView?>
 <SplitPane fx:id="root" dividerPositions="0.29797979797979796" prefHeight="637.0" prefWidth="847.0"
            xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Controller">
-   <AnchorPane maxWidth="400.0" minWidth="150.0" prefWidth="200.0" style="-fx-background-color: #EEE;">
-      <Label layoutX="14.0" layoutY="54.0" text="First image : " AnchorPane.topAnchor="54.0"/>
-      <Button fx:id="firstimagebrowse" layoutX="82.0" layoutY="71.0" mnemonicParsing="false"
-              onAction="#Button1Action" text="Browse..."/>
-      <Label fx:id="firstimagepath" layoutX="34.0" layoutY="109.0" prefHeight="17.0" prefWidth="217.0"
-             text="PathOfImage..."/>
-      <Label layoutX="14.0" layoutY="157.0" text="Second image : "/>
-      <Button fx:id="secondimagebrowse" layoutX="87.0" layoutY="174.0" mnemonicParsing="false"
-              onAction="#Button2Action" text="Browse..."/>
-      <Label fx:id="secondimagepath" layoutX="34.0" layoutY="220.0" prefHeight="17.0" prefWidth="217.0"
-             text="PathOfImage1..."/>
-      <Separator layoutX="130.0" layoutY="301.0" prefHeight="17.0" prefWidth="112.0"/>
-      <Button fx:id="savebutton" layoutX="77.0" layoutY="269.0" mnemonicParsing="false" onAction="#SaveAction"
-              text="Save &amp; update"/>
-      <Label layoutX="87.0" layoutY="301.0" text="Filters  ">
-         <font>
-            <Font name="System Bold" size="12.0"/>
-         </font>
-      </Label>
-      <ComboBox fx:id="filtercombo" layoutX="50.0" layoutY="335.0" prefWidth="150.0" promptText="Select Filter"/>
-      <Separator layoutX="125.0" layoutY="37.0" prefHeight="17.0" prefWidth="122.0"/>
-      <Label layoutX="77.0" layoutY="37.0" text="Sources">
-         <font>
-            <Font name="System Bold" size="12.0"/>
-         </font>
-      </Label>
-      <Separator layoutX="3.0" layoutY="37.0" prefHeight="17.0" prefWidth="68.0"/>
-      <Button fx:id="morebutton" layoutX="99.0" layoutY="563.0" mnemonicParsing="false" onAction="#MoreAction"
-              text="More..."/>
-      <Pane fx:id="transitionpane" layoutX="31.0" layoutY="421.0" prefHeight="112.0" prefWidth="112.0"/>
-      <Separator layoutX="-1.0" layoutY="301.0" prefHeight="17.0" prefWidth="85.0"/>
-   </AnchorPane>
-   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0"
-               style="-fx-background-color: #555;">
-      <Pane prefHeight="637.0" prefWidth="590.0">
-         <Pane fx:id="firstimagepreview" layoutX="55.0" layoutY="43.0" prefHeight="200.0" prefWidth="200.0"/>
-         <Separator layoutX="271.0" layoutY="27.0" orientation="VERTICAL" prefHeight="207.0" prefWidth="24.0"/>
-         <Pane fx:id="secondimagepreview" layoutX="364.0" layoutY="43.0" prefHeight="200.0" prefWidth="200.0">
-         </Pane>
-         <Separator layoutX="1.0" layoutY="269.0" prefHeight="25.0" prefWidth="834.0"/>
-         <Label fx:id="firstimageid" layoutX="35.0" layoutY="18.0" text="First image preview : "/>
-         <Label fx:id="secondimageid" layoutX="315.0" layoutY="18.0" text="Second image preview : "/>
-         <View3D fx:id="resultspane" layoutX="24.0" layoutY="300.0" /><!--prefHeight="326.0" prefWidth="552.0"!-->
-         <VBox fx:id="loadingpane" visible="false" layoutX="24.0" layoutY="300.0" prefWidth="125" prefHeight="125" spacing="20" alignment="CENTER" style="-fx-background-color: white; -fx-border-width: 1px; -fx-border-radius: 5px; -fx-background-radius: 5px;">
-            <ImageView fx:id="load_gif" fitWidth="40" fitHeight="40"/>
-            <Label fx:id="load_text" textAlignment="CENTER"/>
-         </VBox>
-         <Label layoutX="10.0" layoutY="300.0" text="Results Preview : "/>
-      </Pane>
-   </AnchorPane>
+    <AnchorPane maxWidth="400.0" minWidth="150.0" prefWidth="200.0" style="-fx-background-color: #EEE;">
+        <Label layoutX="14.0" layoutY="54.0" text="First image : " AnchorPane.topAnchor="54.0"/>
+        <Button fx:id="firstimagebrowse" layoutX="82.0" layoutY="71.0" mnemonicParsing="false"
+                onAction="#Button1Action" text="Browse..."/>
+        <Label fx:id="firstimagepath" layoutX="34.0" layoutY="109.0" prefHeight="17.0" prefWidth="217.0"
+               text="PathOfImage..."/>
+        <Label layoutX="14.0" layoutY="157.0" text="Second image : "/>
+        <Button fx:id="secondimagebrowse" layoutX="87.0" layoutY="174.0" mnemonicParsing="false"
+                onAction="#Button2Action" text="Browse..."/>
+        <Label fx:id="secondimagepath" layoutX="34.0" layoutY="220.0" prefHeight="17.0" prefWidth="217.0"
+               text="PathOfImage1..."/>
+        <Separator layoutX="130.0" layoutY="301.0" prefHeight="17.0" prefWidth="112.0"/>
+        <Button fx:id="savebutton" layoutX="77.0" layoutY="269.0" mnemonicParsing="false" onAction="#SaveAction"
+                text="Save &amp; update"/>
+        <Label layoutX="87.0" layoutY="301.0" text="Filters  ">
+            <font>
+                <Font name="System Bold" size="12.0"/>
+            </font>
+        </Label>
+        <ComboBox fx:id="filtercombo" layoutX="50.0" layoutY="335.0" prefWidth="150.0" promptText="Select Filter"/>
+        <Separator layoutX="125.0" layoutY="37.0" prefHeight="17.0" prefWidth="122.0"/>
+        <Label layoutX="77.0" layoutY="37.0" text="Sources">
+            <font>
+                <Font name="System Bold" size="12.0"/>
+            </font>
+        </Label>
+        <Separator layoutX="3.0" layoutY="37.0" prefHeight="17.0" prefWidth="68.0"/>
+        <Button fx:id="morebutton" layoutX="99.0" layoutY="563.0" mnemonicParsing="false" onAction="#MoreAction"
+                text="More..."/>
+        <Pane fx:id="transitionpane" layoutX="31.0" layoutY="421.0" prefHeight="112.0" prefWidth="112.0"/>
+        <Separator layoutX="-1.0" layoutY="301.0" prefHeight="17.0" prefWidth="85.0"/>
+    </AnchorPane>
+    <AnchorPane minHeight="0.0" minWidth="0.0"
+                style="-fx-background-color: #555;">
+        <VBox AnchorPane.topAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0">
+            <HBox AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0" alignment="CENTER"
+                  minHeight="200">
+                <Pane>
+                    <StackPane fx:id="firstimagepreview" style="-fx-padding:3px"/>
+                    <Label fx:id="firstimageid" text="First image preview : " layoutX="10" layoutY="10"
+                           style="-fx-padding:3px;-fx-background-color: white; -fx-border-width: 1px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
+                </Pane>
+                <Separator layoutY="27.0" orientation="VERTICAL" prefHeight="207.0" prefWidth="24.0"/>
+                <Pane>
+                    <StackPane fx:id="secondimagepreview" style="-fx-padding:3px"/>
+                    <Label fx:id="secondimageid" text="Second image preview : " layoutX="10" layoutY="10"
+                           style="-fx-padding:3px;-fx-background-color: white; -fx-border-width: 1px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
+                </Pane>
+            </HBox>
+            <Separator AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0"/>
+            <Pane AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" style="-fx-padding: 20px;">
+                <StackPane>
+                    <View3D fx:id="resultspane"/><!--prefHeight="326.0" prefWidth="552.0"!-->
+                    <VBox fx:id="loadingpane" visible="false" maxWidth="125" maxHeight="125"
+                          spacing="20" alignment="CENTER"
+                          style="-fx-background-color: white; -fx-border-width: 1px; -fx-border-radius: 5px; -fx-background-radius: 5px;-fx-padding: 10px">
+                        <ImageView fx:id="load_gif" fitWidth="40" fitHeight="40"/>
+                        <Label fx:id="load_text" textAlignment="CENTER"/>
+                    </VBox>
+                </StackPane>
+                <Label text="Results Preview : " layoutX="10" layoutY="10"
+                       style="-fx-padding:3px;-fx-background-color: white; -fx-border-width: 1px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
+            </Pane>
+        </VBox>
+    </AnchorPane>
 </SplitPane>
